# svarog_service_flat

./: .gitignore  Cargo.toml  Makefile  README.md  svarog.proto
converter/: Cargo.toml
converter/src/: lib.rs
svarog_grpc/: Cargo.toml
svarog_grpc/src/: lib.rs  main.rs  svarog.rs
svarog_peer/: Cargo.toml
svarog_peer/demos/: mock_data.rs  test_keygen_sign.rs  test_mkeygen_bsign.rs
svarog_peer/src/: btc.rs  lib.rs  server_main.rs  solana.rs  structs.rs
svarog_peer/src/_tests/: mock_data.rs  test_keygen_sign.rs  test_keygen_sign_https.rs  test_mkeygen.rs  test_mkeygen_bsign.rs  test_mkeygen_sign.rs  test_reshare.rs
svarog_peer/src/server_impl/: biz.rs  conversion.rs  mod.rs  trait_facade.rs  util.rs
svarog_peer/tests/: integration_test.rs
svarog_peer/toy_client/: main.rs
svarog_peer/toy_client/client_impl/: mod.rs  sesconf.rs
svarog_sesman/: Cargo.toml
svarog_sesman/src/: client_lib.rs  server_impl.rs  server_main.rs
svarog_sesman/tests/: integration_test.rs
