[workspace]
resolver = "2"
members = ["svarog_grpc", "svarog_peer", "svarog_sesman"]

[workspace.dependencies]
bs58 = "*"
clap = "4"
crossbeam-skiplist = "0.1"
curve25519-dalek = "4"
digest = "0.10"
erreur = "0.1"
glob = "0.3"
hex = "0.4"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-pickle = "1"
sha2 = { version = "0.10", features = ["asm"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["channel", "tls", "tls-roots", "tls-webpki-roots", "gzip"] }
tonic-build = { version = "0.11", features = ["prost"] }
uuid = { version = "1", features = ["v7", "fast-rng"] }

mpc_sig_abs = { rev = "68081c6", git = "https://github.com/taiyi-research-institute/mpc_sig_abs.git" }
svarog_algo = { rev = "2a09378", git = "https://github.com/taiyi-research-institute/svarog_algo.git" }
svarog_grpc = { path = "svarog_grpc" }
svarog_sesman = { path = "svarog_sesman" }

[patch.crates-io]
k256 = { git = "https://github.com/taiyi-research-institute/patch-k256-0.13.3.git", branch = "main" }

[profile.release]
opt-level = 3
strip = true
