[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erreur = { workspace = true }
serde = { workspace = true }
serde-pickle = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

svarog_algo = { workspace = true }
svarog_grpc = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
sha2 = { workspace = true }
svarog_sesman = { workspace = true }
