[package]
name = "svarog_grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "protoc_rust"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
glob = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tonic-build = { workspace = true }
